# tomlfmt

./: .travis.yml  README.md  pyproject.toml  tomlfmt.py
tests/: test.good.toml  test.toml  test_tomlfmt.py
